added Wifi support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.48", default-features = false }
+anyhow = "1.0.86"
+toml-cfg = "0.2.0"
+esp-println = { version = "0.9.1", features = ["esp32"] }
 
 [build-dependencies]
 embuild = "0.31.3"
