--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,6 +14,7 @@ build-std = ["std", "panic_abort"]
 MCU="esp32"
 # Note: this variable is not used by the pio builder (`cargo build --features pio`)
 ESP_IDF_VERSION = "v5.1.3"
+ESP_IDF_TOOLS_INSTALL_DIR = "global"
 
 # Workaround for https://github.com/esp-rs/esp-idf-template/issues/174 until
 # https://github.com/esp-rs/esp-idf-hal/pull/387 gets released and the template
