--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,8 @@ esp-idf-svc = { version = "0.48", default-features = false }
 anyhow = "1.0.86"
 toml-cfg = "0.2.0"
 esp-println = { version = "0.9.1", features = ["esp32"] }
+serde = "1.0.203"
+serde_json = "1.0.117"
 
 [build-dependencies]
 embuild = "0.31.3"
